# freezino_python_api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cancel.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  dump_db.py  freezino.db  freezino2.db  http-test.py  init.sql  main.py  openapi.txt  openapi.yaml  pyproject.toml  rega.py  requirements.txt  skip-jail.py  swagger-ui.html  tatus
.github/: CODEOWNERS
.github/docs/: secrets.md
.github/workflows/: cd.yml  ci.yml  uptime.yml
app/: config.py  db.py  main.py  security.py
app/data/: __init__.py  items.py  jobs.py
app/models/: __init__.py  user.py  work.py
app/routers/: auth.py  games.py  health.py  loans.py  shop.py  stats.py  user.py  work.py
docker/: entrypoint.sh
docker/nginx/: default.conf
docs/: SERVER_BOOTSTRAP.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/e2e/: auth.spec.ts  shop.spec.ts  work.spec.ts
frontend/public/design/: README.md  index.html
frontend/src/: App.tsx
frontend/src/components/: BankruptcyPopup.tsx  ComingSoon.tsx  CookieConsent.tsx  CookieSettings.tsx  JobSelector.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  WorkTimer.test.tsx  WorkTimer.tsx
frontend/src/layouts/: Footer.tsx  Header.tsx
frontend/src/pages/: CasinoStatsPage.tsx  GameHistoryPage.tsx  Home.tsx  LoginPage.tsx  ProfilePage.tsx  ShopPage.tsx
frontend/src/store/: authStore.test.ts  loanStore.ts  shopStore.test.ts  workStore.test.ts  (+1 more)
scripts/: backup-cron.sh  nginx-freezino.conf
tests/manual/: README.md
(+51 files in other folders)
